--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -5,164 +5,177 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".UI.SignUpActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".UI.SignUpActivity">
 
-    <ImageView
-        android:id="@+id/signup_shoppre_logo"
-        android:layout_width="164dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="125dp"
-        android:layout_marginTop="77dp"
-        android:src="@drawable/shopprelogo"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/signup_google_btn"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="68dp"
-        android:layout_marginTop="181dp"
-        android:backgroundTint="#F3F6F9"
-        android:fontFamily="@font/montserrat"
-        android:insetLeft="0dp"
-        android:insetTop="0dp"
-        android:insetRight="0dp"
-        android:insetBottom="0dp"
-        android:paddingLeft="19dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="11dp"
-        android:text="Sign Up with Google"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textFontWeight="500"
-        android:textSize="12sp"
-        app:cornerRadius="8dp"
-        app:elevation="4dp"
-        app:icon="@drawable/ic_google"
-        app:iconSize="24dp"
-        app:iconTintMode="multiply" />
+        android:layout_height="match_parent">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/signup_fb_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="68dp"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="#F3F6F9"
-        android:insetLeft="0dp"
-        android:insetTop="0dp"
-        android:insetRight="0dp"
-        android:insetBottom="0dp"
-        android:paddingLeft="19dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="11dp"
-        android:text="Sign Up with Facebook"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textFontWeight="500"
-        android:textSize="12sp"
-        app:cornerRadius="8dp"
-        app:elevation="4dp"
-        app:icon="@drawable/ic_fb"
-        app:iconSize="24dp"
-        app:iconTintMode="multiply" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="42dp">
-
-        <TextView
-            android:id="@+id/or"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="3dp"
-            android:layout_marginBottom="1dp"
-            android:text="OR"
-            android:textColor="#000000" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="39dp"
-            android:layout_toLeftOf="@id/or"
-            android:background="#000000" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="39dp"
-            android:layout_toRightOf="@id/or"
-            android:background="#000000" />
-
-    </RelativeLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/emailId"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginRight="38dp"
-        app:boxBackgroundColor="#F3F6F9"
-        app:boxCornerRadiusBottomEnd="5dp"
-        app:boxCornerRadiusBottomStart="5dp"
-        app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="#F3F6F9"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:hintAnimationEnabled="false"
-        app:hintEnabled="false">
-
-        <com.google.android.material.textfield.TextInputEditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Email ID"
-            android:padding="10dp"
-            android:inputType="textEmailAddress"
-            android:singleLine="true"
-            android:textColor="#AFADAD"
-            android:textColorHint="#AFADAD"
-            android:textSize="12sp"
-            app:boxStrokeColor="#F3F6F9" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+            android:orientation="vertical">
 
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/get_started_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="82dp"
-        android:layout_marginTop="44dp"
-        android:backgroundTint="#2D8DFF"
-        android:lineHeight="17sp"
-        android:paddingTop="10dp"
-        android:paddingBottom="11dp"
-        android:text="Get Started!"
-        android:textAllCaps="false"
-        android:textStyle="bold"
-        android:textFontWeight="700"
-        app:cornerRadius="5dp"
-        app:elevation="4dp" />
+            <ImageView
+                android:id="@+id/signup_shoppre_logo"
+                android:layout_width="164dp"
+                android:layout_height="50dp"
+                android:layout_marginHorizontal="125dp"
+                android:layout_marginTop="77dp"
+                android:src="@drawable/shopprelogo" />
 
-    <TextView
-        android:id="@+id/signup_already_acnt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/alreay_have"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="28dp"
-        android:textSize="12sp"/>
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/signup_google_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="68dp"
+                android:layout_marginTop="181dp"
+                android:backgroundTint="#F3F6F9"
+                android:fontFamily="@font/montserrat"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:paddingLeft="19dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="11dp"
+                android:text="Sign Up with Google"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:textFontWeight="500"
+                android:textSize="12sp"
+                app:cornerRadius="8dp"
+                app:elevation="4dp"
+                app:icon="@drawable/ic_google"
+                app:iconSize="24dp"
+                app:iconTintMode="multiply" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/signup_fb_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="68dp"
+                android:layout_marginTop="32dp"
+                android:backgroundTint="#F3F6F9"
+                android:insetLeft="0dp"
+                android:insetTop="0dp"
+                android:insetRight="0dp"
+                android:insetBottom="0dp"
+                android:paddingLeft="19dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="11dp"
+                android:text="Sign Up with Facebook"
+                android:textAllCaps="false"
+                android:textColor="@color/black"
+                android:textFontWeight="500"
+                android:textSize="12sp"
+                app:cornerRadius="8dp"
+                app:elevation="4dp"
+                app:icon="@drawable/ic_fb"
+                app:iconSize="24dp"
+                app:iconTintMode="multiply" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="42dp">
+
+                <TextView
+                    android:id="@+id/or"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="3dp"
+                    android:layout_marginBottom="1dp"
+                    android:text="OR"
+                    android:textColor="#000000" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="39dp"
+                    android:layout_toLeftOf="@id/or"
+                    android:background="#000000" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="39dp"
+                    android:layout_toRightOf="@id/or"
+                    android:background="#000000" />
+
+            </RelativeLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/emailId"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="28dp"
+                android:layout_marginRight="38dp"
+                app:boxBackgroundColor="#F3F6F9"
+                app:boxCornerRadiusBottomEnd="5dp"
+                app:boxCornerRadiusBottomStart="5dp"
+                app:boxCornerRadiusTopEnd="5dp"
+                app:boxCornerRadiusTopStart="5dp"
+                app:boxStrokeColor="#F3F6F9"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Email ID"
+                    android:inputType="textEmailAddress"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColor="#AFADAD"
+                    android:textColorHint="#AFADAD"
+                    android:textSize="12sp"
+                    app:boxStrokeColor="#F3F6F9" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/get_started_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="82dp"
+                android:layout_marginTop="44dp"
+                android:backgroundTint="#2D8DFF"
+                android:lineHeight="17sp"
+                android:paddingTop="10dp"
+                android:paddingBottom="11dp"
+                android:text="Get Started!"
+                android:textAllCaps="false"
+                android:textFontWeight="700"
+                android:textStyle="bold"
+                app:cornerRadius="5dp"
+                app:elevation="4dp" />
+
+            <TextView
+                android:id="@+id/signup_already_acnt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="28dp"
+                android:text="@string/alreay_have"
+                android:textSize="12sp"
+                android:paddingBottom="22dp"/>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
