--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -4,135 +4,151 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.ResetPassword"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".UI.ResetPassword">
 
-    <ImageView
-        android:layout_width="164dp"
-        android:layout_height="50dp"
-        android:src="@mipmap/shoppre_logo"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="77dp"
-        android:contentDescription="@string/shoppre_logo_string"/>
-
-    <ImageView
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="2dp"
-        android:src="@drawable/ic_reset_password"
-        android:contentDescription="@string/forgot_password_2_image"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Reset Password"
-        android:textColor="@color/black"
-        android:textFontWeight="600"
-        android:textSize="12dp"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="39dp"
-        android:layout_marginTop="22dp"
-        android:text="New Password"
-        android:textColor="@color/black"
-        android:textFontWeight="500"
-        android:textSize="12sp"/>
-    <com.google.android.material.textfield.TextInputLayout
-
-
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="39dp"
+        android:layout_height="match_parent">
 
-        android:layout_marginTop="6dp"
-
-        app:boxBackgroundColor="@color/box_background_color"
-        app:boxCornerRadiusBottomEnd="5dp"
-        app:boxCornerRadiusBottomStart="5dp"
-        app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="@color/box_background_color"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        android:id="@+id/newPassword">
-
-        <com.google.android.material.textfield.TextInputEditText
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/new_password_string"
-            android:padding="10dp"
-            android:textColor="@color/hint_color"
-            android:textColorHint="@color/hint_color"
-            android:textSize="12sp"
-            app:boxStrokeColor="@color/box_background_color"
-            android:singleLine="true"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:orientation="vertical"
+            android:paddingBottom="22dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="39dp"
-        android:layout_marginTop="22dp"
-        android:text="Confirm New Password"
-        android:textColor="@color/black"
-        android:textFontWeight="500"
-        android:textSize="12sp"/>
-    <com.google.android.material.textfield.TextInputLayout
+            <ImageView
+                android:layout_width="164dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="77dp"
+                android:contentDescription="@string/shoppre_logo_string"
+                android:src="@mipmap/shoppre_logo" />
+
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="2dp"
+                android:contentDescription="@string/forgot_password_2_image"
+                android:src="@drawable/ic_reset_password" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="Reset Password"
+                android:textColor="@color/black"
+                android:textFontWeight="600"
+                android:textSize="12dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="39dp"
+                android:layout_marginTop="22dp"
+                android:text="New Password"
+                android:textColor="@color/black"
+                android:textFontWeight="500"
+                android:textSize="12sp" />
+
+            <com.google.android.material.textfield.TextInputLayout
 
 
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="39dp"
+                android:id="@+id/newPassword"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
-        android:layout_marginTop="6dp"
+                android:layout_marginHorizontal="39dp"
 
-        app:boxBackgroundColor="@color/box_background_color"
-        app:boxCornerRadiusBottomEnd="5dp"
-        app:boxCornerRadiusBottomStart="5dp"
-        app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="@color/box_background_color"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        android:id="@+id/confirmNewPassword">
+                android:layout_marginTop="6dp"
+                app:boxBackgroundColor="@color/box_background_color"
+                app:boxCornerRadiusBottomEnd="5dp"
+                app:boxCornerRadiusBottomStart="5dp"
+                app:boxCornerRadiusTopEnd="5dp"
+                app:boxCornerRadiusTopStart="5dp"
+                app:boxStrokeColor="@color/box_background_color"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/confirm_new_password_string"
-            android:padding="10dp"
-            android:textColor="@color/hint_color"
-            android:textColorHint="@color/hint_color"
-            android:textSize="12sp"
-            app:boxStrokeColor="@color/box_background_color"
-            android:singleLine="true"/>
-    </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/new_password_string"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColor="@color/hint_color"
+                    android:textColorHint="@color/hint_color"
+                    android:textSize="12sp"
+                    app:boxStrokeColor="@color/box_background_color" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="38dp"
-        android:id="@+id/resetPassword"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="39dp"
+                android:layout_marginTop="22dp"
+                android:text="Confirm New Password"
+                android:textColor="@color/black"
+                android:textFontWeight="500"
+                android:textSize="12sp" />
 
-        android:text="@string/reset_password_string"
-        android:backgroundTint="@color/button_blue"
-        android:textSize="14sp"
-        android:textAllCaps="false"
-        android:letterSpacing="0.03"
-        android:textFontWeight="600"
-        app:elevation="4dp"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        app:cornerRadius="5dp"
-        android:layout_marginHorizontal="82dp"
-        android:layout_marginTop="22dp"/>
+            <com.google.android.material.textfield.TextInputLayout
+
+
+                android:id="@+id/confirmNewPassword"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginHorizontal="39dp"
+
+                android:layout_marginTop="6dp"
+                app:boxBackgroundColor="@color/box_background_color"
+                app:boxCornerRadiusBottomEnd="5dp"
+                app:boxCornerRadiusBottomStart="5dp"
+                app:boxCornerRadiusTopEnd="5dp"
+                app:boxCornerRadiusTopStart="5dp"
+                app:boxStrokeColor="@color/box_background_color"
+                app:boxStrokeWidth="0dp"
+                app:boxStrokeWidthFocused="0dp"
+                app:hintAnimationEnabled="false"
+                app:hintEnabled="false">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/confirm_new_password_string"
+                    android:padding="10dp"
+                    android:singleLine="true"
+                    android:textColor="@color/hint_color"
+                    android:textColorHint="@color/hint_color"
+                    android:textSize="12sp"
+                    app:boxStrokeColor="@color/box_background_color" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/resetPassword"
+                android:layout_width="match_parent"
+                android:layout_height="38dp"
+
+                android:layout_marginHorizontal="82dp"
+                android:layout_marginTop="22dp"
+                android:backgroundTint="@color/button_blue"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
+                android:letterSpacing="0.03"
+                android:text="@string/reset_password_string"
+                android:textAllCaps="false"
+                android:textFontWeight="600"
+                android:textSize="14sp"
+                app:cornerRadius="5dp"
+                app:elevation="4dp" />
+
+        </LinearLayout>
+
+    </ScrollView>
 </LinearLayout>
